# system-tests

./: .cursorrules  .docker-compose.yml.kate-swp  .dockerignore  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .shellcheck  .shellcheckrc  .yamlfmt  .yamllint  AGENTS.md  APPSEC_RESTART_PROPAGATION_ANALYSIS.md  AUDIT.md  CHANGELOG.md  CONTAINER_ID_SOLUTION.md  COVERAGE.md  EVALUATION.md  EXTENDED_HEARTBEAT_TESTS.md  FINDINGS.md  GAPS.md  LICENSE-3rdparty.csv  NOTICE  PLAN.md  PORTING_CHEATSHEET.md  PUT_CiJobReport.sh  Pulumi.baptiste-foy-aws-vm.yaml  Pulumi.baptiste-foy-installer-lab.yaml  Pulumi.system-tests_onboarding.yaml  Pulumi.testing_v3.yaml  Pulumi.yaml  README.md  SPIKE.md  TODO.md  ato_tests.sh  bake.Dockerfile  boot.py  (+51 more)
.circleci/: config.yml
.claude/: CLAUDE.md  settings.json
.cursor/: mcp.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.gitlab/: Dockerfile.gitlab  aws_gitlab-ci.yml  feature-parity-dashboard.yml  k8s_gitlab-ci.yml  mock.yml  single-step-instrumentation-tests-locked.yml  ssi-gitlab-ci.yml  ssi_gitlab-ci-template.yml  ssi_gitlab-ci.yml
.promptfoo/: local_cursor_provider.py  tests_activate_tests.yaml  tests_aws_ssi.yaml  tests_end_to_end.yaml  tests_k8s_tests.yaml  tests_overview.yaml  tests_task_java_endpoint_prompt.yaml
adapters/: RUST_CPP_SPIKE.md
adapters/dd-trace-go/rust-adapter/: Cargo.toml  build.rs
adapters/dd-trace-go/rust-adapter/src/: main.rs
adapters/dd-trace-ruby/shim/: Cargo.toml
adapters/dd-trace-ruby/shim/src/: lib.rs
adapters/dd-trace-rust/: Cargo.toml  README.md  build.sh  run.py
adapters/dd-trace-rust/src/: main.rs
apm_client/: README.md  conftest.py  generate_protos.sh  requirements.txt  setup.sh  test.sh  test_client_stats.py  test_span_sampling.py  trace.py
binaries/: README.md  agent-image  cpp-load-from-git  python-load-from-pip
chainguard/: self.test-activation.sts.yaml
docs/: README.md  glossary.md  prez.md  who-is-the-owner.md
integration_unit/: README.md  conftest.py  generate_protos.sh  run.sh  test_client_tracestats.py
lib-injection/: README.md  build.sh  execFunction.sh  run-auto-lib-injection.sh  run-lib-injection.sh  run-manual-lib-injection.sh  run-rc-lib-injection.sh
manifests/: agent.yml  c.yml  cpp.yml  cpp_httpd.yml  cpp_kong.yml  cpp_nginx.yml  dd-apm-inject.yml  dd_apm_inject.yml  dotnet.yml  envoy.yml  golang.yml  golang_proxies.yml  haproxy.yml  java.yml  java_lambda.yml  java_otel.yml  k8s_cluster_agent.yml  nodejs-ref.yml  nodejs.yml  nodejs_lambda.yml  nodejs_otel.yml  php.yml  php_appsec.yml  python.yml  python_lambda.yml  python_otel.yml  ruby.yml  ruby_lambda.yml  rust.yml
onboarding/: EC2_manager.py  README.md  USAGE.md  __main__.py  backend_interface.py  conftest.py  logging.conf  provision.yml  provision_AIT-6447.yml  provision_ansible.yml  provision_ansible_host.yml  provision_container.yml  provision_docker.yml  provision_filter.py  provision_host.yml  provision_host_container.yml  provision_host_docker.yml  provision_parser.py  provision_prepare_repos.yml  requirements.txt  run.sh  run_tests.sh  user_data.sh  wait_for_tcp_port.py  weblog_interface.py
parametric/: README.md  _library_client.py  conftest.py  generate_protos.ps1  generate_protos.sh  nodejs.skip  openapi.yaml  requirements.txt  run.ps1  run.sh  test.py  test_128_bit_traceids.py  test_client_tracestats.py  test_dynamic_configuration.py  test_headers_b3.py  test_headers_b3multi.py  test_headers_datadog.py  test_headers_none.py  test_headers_precedence.py  test_headers_tracecontext.py  test_headers_tracestate_dd.py  test_library_tracestats.py  test_otel_span_methods.py  test_otel_span_with_w3c.py  test_otel_tracer.py  test_partial_flushing.py  test_span_sampling.py  test_trace_distributed.py  test_tracer.py
scenarios/: appsec_unsupported.py  rc_expected_requests.json  rc_tuf_root.json  sampling_rates.py  sleep.py  telemetry.py  test_client_ip.py  test_data_integrity.py  test_distributed.py  test_library_conf.py  test_no_ip_is_reported.py  test_php_bug.py  test_profiling.py  test_remote_configuration.py  test_trace_stats.py
scripts/: aws_login.sh
spec/: trace.py
src/: asserts.temper  cases.temper  config.temper.md  config_consistency.temper  config_consistency_more.temper  dynamic_configuration.temper  fake_tracer.temper  headers_b3.temper  headers_b3_variants.temper  headers_b3multi.temper  headers_baggage.temper  headers_baggage_more.temper  headers_datadog.temper  headers_none.temper  headers_none_more.temper  headers_precedence.temper  headers_precedence_more.temper  headers_tracecontext.temper  headers_tracecontext_more.temper  headers_tracestate_change.temper  headers_tracestate_dd.temper  headers_tracestate_more.temper  hex.temper  library_tracestats.temper  otel_env_vars.temper  otel_interop.temper  otel_span.temper  otel_span_more.temper  partial_flushing.temper  sampling_delegation.temper  span_events.temper  span_links.temper  span_sampling.temper  spec.temper  system-tests-redux.temper  telemetry.temper  trace_sampling.temper  trace_sampling_more.temper  traceids_128bit.temper  traceids_128bit_b3.temper  (+3 more)
test/: docker-compose.yml
tests/: README.md  __init__.py  _telemetry_heartbeat.py  constants.py  template_test.py  test_baggage.py  test_config_consistency.py  test_data_integrity.py  test_demo.py  test_dependency_enable.py  test_distributed.py  test_feature_flag_exposure.py  test_feature_flag_exposures.py  test_force_batching_enabled.py  test_graphql.py  test_graphql_operation_variables.py  test_identify.py  test_ipv6.py  test_library_conf.py  test_library_logs.py  test_miscs.py  test_no_ip_is_reported.py  test_otel_http_semantics.py  test_otel_http_semantics_otlp.py  test_otel_tracestate_sampling.py  test_otlp_runtime_metrics.py  test_product_disbled.py  test_profiling.py  test_protobuf.py  test_remote_config.py  test_remote_configuration.py  test_resource_renaming.py  test_rum_injection.py  test_runtime_metrics.py  test_sampling.py  test_sampling_rate_capping.py  test_sampling_rates.py  test_schemas.py  (+14 more)
(+2342 files in other folders)
