[package]
name = "dd-trace-go-adapter"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "conformance"
path = "src/main.rs"

[dependencies]
system-tests-redux = { path = "../../../temper.out/rust/system-tests-redux" }
temper-core = { path = "../../../temper.out/rust/temper-core" }
serde_json = "1"
